devel
-----

* Fixed restoring a SmartGraph into a database that already contains that same graph.
  The use case is restoring a SmartGraph from backup, apply some modifications, which are
  undesired, and then resetting it to the restored state, without dropping the database.
  One way to achieve this is to use arangorestore with the `overwrite` option on the same dataset, 
  effectively resetting the SmartGraph to the original state.
  Without this fix, the workaround for is to either drop the graph (or the database) before the
  restore call, yielding an identical result.
  
* Keep the list of last-acknowledged entires in Agency more consistent.
  During leadership take-over it was possible to get into a situation that
  the new leader does not successfully report the agency config, which
  was eventually fixed by the Agent itself. Now this situation is impossible.

* Allow changing collection properties for smart edge collections as well. 

* Fixed that the hotbackup agency lock is released under all circumstances
  using scope guards. This addresses a rare case in which the lock was left
  behind.

* Privatized load plan / current in cluster info and cleanup following
  agency cache implementation.

* Fix cluster-internal request forwarding for VST requests that do not have any
  Content-Type header set. Such requests could have been caused by the Java
  driver (ES-635).

* Fixed issue OASIS-252: Hotbackup agency locks without clientId.

* The `_from` and `_to` attributes of an edge document can now be edited from
  within the UI.

* Added vertex collection validation in case of a SmartGraph edge definition
  update. 

* Updated arangosync to 0.7.7.

* Added support `db._engineStats()` API in coordinator. Previously calling this
  API always produced an empty result. Now it will return the engine statistics
  as an object, with an entry for each individual DB-Server.

* Fixed a document parsing bug in the Web UI. This issue occured in the