@@ -108,6 +108,9 @@ struct AsyncAgencyStorePoolConnection final : public fuerte::Connection {
 
   void cancel() override {}
   void start() override {}
+  bool lease() override {
+    return true;
+  }
 
   AsyncAgencyStorePoolMock* _mock;
   std::string _endpoint;
